works with 8 bit